calc ratings with thresholds
