# model/department.go
@@ -1,12 +1,7 @@
 package model
 
-import (
-	"fmt"
-
-	"github.com/bcmendoza/pulse/utils"
-)
-
 type Department struct {
+	Type     string             `json:"type"`
 	Name     string             `json:"name"`
 	Children map[string]Patient `json:"patients"`
 	Stream   Stream             `json:"stream"`
@@ -17,17 +12,16 @@ func (h *Hospital) AddDepartment(name string) {
 	defer h.Unlock()
 
 	h.Children[name] = Department{
-		Name:     fmt.Sprintf("department-%s", name),
+		Type:     "department",
+		Name:     name,
 		Children: make(map[string]Patient),
 		Stream: Stream{
-			Owner:    name,
-			UnitType: "%",
-			Ratings:  make(map[string]Rating),
-			Current: Pulse{
-				Score:     0,
-				Timestamp: utils.Timestamp(),
-			},
-			Historical: make([]Pulse, 0),
+			Owner:      name,
+			UnitType:   "%",
+			History:    make([]Pulse, 0),
+			Lower:      0,
+			Upper:      100,
+			Thresholds: []float64{33.33, 66.66},
 		},
 	}
 }
